@@ -1,6 +1,7 @@
 package com.toddfast.util.convert;
 
 import org.junit.jupiter.api.Test;
+import org.kendar.util.convert.TypeConverter;
 
 import java.math.BigDecimal;
 
@@ -12,13 +13,25 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public class TypeConverterTest {
 
+	@Test public void bigDecimal(){
+
+		Object in;
+		Object out;
+
+		String big="1234567890123456789012345678901234567890123456789012345678";
+		in=big;
+		out= TypeConverter.convert(BigDecimal.class,in);
+		assertTrue(out instanceof BigDecimal);
+		assertEquals(new BigDecimal(big),out);
+	}
+
 	@Test
 	public void testGeneral() {
 
 		Object in;
 		Object out;
 
-		in=new Integer(12);
+		in= Integer.valueOf(12);
 		out=TypeConverter.asString(in);
 		assertTrue(out instanceof String);
 		assertEquals("12",out);
